# mikrotik-upgrade

./: .gitignore  README.md  config.yaml.example  pyproject.toml
.github/workflows/: publish-to-pypi.yml
mikrotik_upgrade/: upgrade.py
